Refactored DI code to take better advantage of DI rather than using the new keyword to create instances during the configuration.

--- a/src/ComplexCommerce/ComplexCommerce/ComplexCommerce.csproj
+++ b/src/ComplexCommerce/ComplexCommerce/ComplexCommerce.csproj
@@ -200,6 +200,7 @@
     <Compile Include="DI\Registries\CslaGlobalRegistry.cs" />
     <Compile Include="DI\Registries\MvcSiteMapProviderRegistry.cs" />
     <Compile Include="DI\Registries\PresentationRegistry.cs" />
+    <Compile Include="DI\Registries\StructureMapRegistry.cs" />
     <Compile Include="DI\StructureMapContainer.cs" />
     <Compile Include="DI\StructureMapResolver.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
@@ -207,7 +208,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="PageRoute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
