--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,6 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
+# Database directory
+[Aa]pp_[Dd]ata/
