Added entity framework to packages

--- a/src/ComplexCommerce/packages/repositories.config
+++ b/src/ComplexCommerce/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\ComplexCommerce.Business\packages.config" />
   <repository path="..\ComplexCommerce.Csla\packages.config" />
+  <repository path="..\ComplexCommerce.Data.Entity\packages.config" />
   <repository path="..\ComplexCommerce.Data.SqlServer\packages.config" />
   <repository path="..\ComplexCommerce.Data\packages.config" />
   <repository path="..\ComplexCommerce.Shared\packages.config" />
