--- a/src/ComplexCommerce/ComplexCommerce.Data.Entity/App.config
+++ b/src/ComplexCommerce/ComplexCommerce.Data.Entity/App.config
@@ -7,4 +7,4 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-</configuration>
+<connectionStrings><add name="ComplexCommerce" connectionString="metadata=res://*/Model.Model.csdl|res://*/Model.Model.ssdl|res://*/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=ComplexCommerce2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
