--- a/src/ComplexCommerce/ComplexCommerce/Views/Web.config
+++ b/src/ComplexCommerce/ComplexCommerce/Views/Web.config
@@ -19,6 +19,8 @@
         <add namespace="System.Web.Routing" />
 				<add namespace="MvcSiteMapProvider.Web.Html"/>
 				<add namespace="MvcSiteMapProvider.Web.Html.Models"/>
+				<add namespace="ComplexCommerce.Web.Mvc"/>
+				<add namespace="ComplexCommerce.Web.Mvc.Helpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
