--- a/src/ComplexCommerce/ComplexCommerce/Web.config
+++ b/src/ComplexCommerce/ComplexCommerce/Web.config
@@ -42,6 +42,8 @@
         <add namespace="System.Web.WebPages" />
         <add namespace="MvcSiteMapProvider.Web.Html" />
         <add namespace="MvcSiteMapProvider.Web.Html.Models" />
+				<add namespace="ComplexCommerce.Web.Mvc"/>
+				<add namespace="ComplexCommerce.Web.Mvc.Helpers"/>
       </namespaces>
     </pages>
   </system.web>
@@ -58,6 +60,7 @@
     <httpErrors errorMode="Custom" existingResponse="Replace">
 			<remove statusCode="404"/>
       <error statusCode="404" responseMode="ExecuteURL" path="/not-found" />
+			<!-- TODO: Show errors in debug mode -->
 			<remove statusCode="500"/>
       <error statusCode="500" responseMode="ExecuteURL" path="/server-error" />
     </httpErrors>
