Removed unnecessary criteria from RouteUrlPageList and RouteUrlProductList. Removed unnecessary fields from ParentUrlPageDto, ParentUrlPageInfo, RouteUrlPageDto. Added Catalog, Routing and SiteMap namespaces to organize the Csla classes.

--- a/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Dto\ProductDto.cs" />
     <Compile Include="Dto\ProductLocaleDto.cs" />
     <Compile Include="Dto\RouteUrlProductDto.cs" />
+    <Compile Include="Dto\SiteMapPageDto.cs" />
     <Compile Include="Dto\SiteMapProductDto.cs" />
     <Compile Include="Dto\TenantDto.cs" />
     <Compile Include="IDataInitializer.cs" />
