--- a/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
@@ -56,42 +56,40 @@
     <Compile Include="Caching\ISingletonObjectCache.cs" />
     <Compile Include="Caching\LazyLock.cs" />
     <Compile Include="Caching\SingletonObjectCache.cs" />
-    <Compile Include="Category.cs" />
-    <Compile Include="CategoryProductInfo.cs" />
-    <Compile Include="CategoryProductList.cs" />
-    <Compile Include="ContentTypeEnum.cs" />
+    <Compile Include="Catalog\Category.cs" />
+    <Compile Include="Catalog\CategoryProductInfo.cs" />
+    <Compile Include="Catalog\CategoryProductList.cs" />
+    <Compile Include="Routing\ContentTypeEnum.cs" />
     <Compile Include="Context\ApplicationContext.cs" />
     <Compile Include="Context\ApplicationContextSourceEnum.cs" />
     <Compile Include="Context\IApplicationContext.cs" />
-    <Compile Include="ITenantLocale.cs" />
     <Compile Include="Globalization\PageLocaleInfo.cs" />
     <Compile Include="Globalization\PageLocaleList.cs" />
-    <Compile Include="ParentUrlPageInfo.cs" />
-    <Compile Include="Product.cs" />
-    <Compile Include="ProductCategoryInfo.cs" />
-    <Compile Include="ProductCategoryList.cs" />
+    <Compile Include="Routing\ParentUrlPageInfo.cs" />
+    <Compile Include="Catalog\Product.cs" />
+    <Compile Include="Catalog\ProductCategoryInfo.cs" />
+    <Compile Include="Catalog\ProductCategoryList.cs" />
     <Compile Include="Globalization\ProductLocaleInfo.cs" />
     <Compile Include="Globalization\ProductLocaleList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RouteUrlPageInfo.cs" />
-    <Compile Include="RouteUrlPageList.cs" />
-    <Compile Include="RouteUrlProductInfo.cs" />
-    <Compile Include="RouteUrlProductList.cs" />
+    <Compile Include="Routing\RouteUrlPageInfo.cs" />
+    <Compile Include="Routing\RouteUrlPageList.cs" />
+    <Compile Include="Routing\RouteUrlProductInfo.cs" />
+    <Compile Include="Routing\RouteUrlProductList.cs" />
     <Compile Include="Rules\UrlPathLeadingSlashRule.cs" />
     <Compile Include="Rules\UrlPathLocaleRule.cs" />
     <Compile Include="Rules\UrlPathPageRule.cs" />
     <Compile Include="Rules\UrlPathProductRule.cs" />
     <Compile Include="Rules\UrlPathTrailingSlashRule.cs" />
-    <Compile Include="SiteMapPageList.cs" />
-    <Compile Include="SiteMapPageTree.cs" />
-    <Compile Include="SiteMapProductInfo.cs" />
-    <Compile Include="SiteMapProductList.cs" />
+    <Compile Include="SiteMap\SiteMapPageList.cs" />
+    <Compile Include="SiteMap\SiteMapPageTree.cs" />
+    <Compile Include="SiteMap\SiteMapProductInfo.cs" />
+    <Compile Include="SiteMap\SiteMapProductList.cs" />
     <Compile Include="Tenant.cs" />
-    <Compile Include="TenantLocaleCriteria.cs" />
     <Compile Include="TenantTypeEnum.cs" />
     <Compile Include="Text\IUrlBuilder.cs" />
     <Compile Include="Text\StringExtensions.cs" />
-    <Compile Include="ParentUrlPageList.cs" />
+    <Compile Include="Routing\ParentUrlPageList.cs" />
     <Compile Include="Text\UrlBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
