--- a/src/ComplexCommerce/ComplexCommerce.Web.Mvc/ComplexCommerce.Web.Mvc.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Web.Mvc/ComplexCommerce.Web.Mvc.csproj
@@ -48,8 +48,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="MvcSiteMapProvider">
-      <HintPath>..\..\..\lib\MvcSiteMapProvider\MvcSiteMapProvider.dll</HintPath>
+    <Reference Include="MvcSiteMapProvider, Version=4.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\..\Projects\MvcSiteMapProvider\src\MvcSiteMapProvider\MvcSiteMapProvider\bin\Debug\MvcSiteMapProvider.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -89,6 +90,7 @@
     <Compile Include="DI\InjectableControllerFactory.cs" />
     <Compile Include="Helpers\HtmlHelperExtensions.cs" />
     <Compile Include="Helpers\ViewDataContainer.cs" />
+    <Compile Include="Helpers\WebPageExecutingBaseExtensions.cs" />
     <Compile Include="Routing\DefaultLocaleRedirectRoute.cs" />
     <Compile Include="LocalizedModelBinder.cs" />
     <Compile Include="Routing\IRouteUtilities.cs" />
@@ -113,6 +115,10 @@
     <ProjectReference Include="..\ComplexCommerce.Csla\ComplexCommerce.Csla.csproj">
       <Project>{7507fc2a-83e4-4a37-a556-832a3b976184}</Project>
       <Name>ComplexCommerce.Csla</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ComplexCommerce.Data\ComplexCommerce.Data.csproj">
+      <Project>{8828e388-19c6-496a-9f28-c34673eb6fa2}</Project>
+      <Name>ComplexCommerce.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\ComplexCommerce.Shared\ComplexCommerce.Shared.csproj">
       <Project>{504a88ab-4631-411b-83b0-1e40bf4bba97}</Project>
