Added Localization for validators and model attributes.

--- a/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Catalog\Category.cs" />
     <Compile Include="Catalog\CategoryProductInfo.cs" />
     <Compile Include="Catalog\CategoryProductList.cs" />
+    <Compile Include="Globalization\AssemblyTypeTextLocaleInfo.cs" />
+    <Compile Include="Globalization\AssemblyTypeTextLocaleList.cs" />
     <Compile Include="Globalization\ViewTextLocaleInfo.cs" />
     <Compile Include="Globalization\ViewTextLocaleList.cs" />
     <Compile Include="Routing\ContentTypeEnum.cs" />
