--- a/src/ComplexCommerce/ComplexCommerce.Data.Entity/ComplexCommerce.Data.Entity.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data.Entity/ComplexCommerce.Data.Entity.csproj
@@ -75,6 +75,7 @@
       <DependentUpon>Model.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\AssemblyTypeRepository.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\PageRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
