--- a/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Context\IPersistenceDetails.cs" />
     <Compile Include="Context\PersistenceContextFactory.cs" />
     <Compile Include="DataNotFoundException.cs" />
+    <Compile Include="Dto\AssemblyTypeLocaleDto.cs" />
     <Compile Include="Dto\CategoryDto.cs" />
     <Compile Include="Dto\CategoryProductDto.cs" />
     <Compile Include="Dto\PageLocaleDto.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="Dto\ViewLocaleDto.cs" />
     <Compile Include="IDataInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IAssemblyTypeRepository.cs" />
     <Compile Include="Repositories\ICategoryRepository.cs" />
     <Compile Include="Repositories\IPageRepository.cs" />
     <Compile Include="Repositories\IProductRepository.cs" />
