--- a/src/ComplexCommerce/ComplexCommerce.Data.Entity/ComplexCommerce.Data.Entity.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data.Entity/ComplexCommerce.Data.Entity.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AssemblyTypeRepository.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
+    <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\PageRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\TenantRepository.cs" />
