--- a/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Dto\AssemblyTypeLocaleDto.cs" />
     <Compile Include="Dto\CategoryDto.cs" />
     <Compile Include="Dto\CategoryProductDto.cs" />
+    <Compile Include="Dto\ErrorDto.cs" />
     <Compile Include="Dto\PageLocaleDto.cs" />
     <Compile Include="Dto\ParentUrlPageDto.cs" />
     <Compile Include="Dto\ProductCategoryDto.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IAssemblyTypeRepository.cs" />
     <Compile Include="Repositories\ICategoryRepository.cs" />
+    <Compile Include="Repositories\IErrorRepository.cs" />
     <Compile Include="Repositories\IPageRepository.cs" />
     <Compile Include="Repositories\IProductRepository.cs" />
     <Compile Include="Repositories\ITenantRepository.cs" />
