--- a/src/ComplexCommerce/ComplexCommerce/Web.config
+++ b/src/ComplexCommerce/ComplexCommerce/Web.config
@@ -7,6 +7,12 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="elmah">
+      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <!--<add name="ComplexCommerce" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ComplexCommerce-20130226003921;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ComplexCommerce-20130226003921.mdf" providerName="System.Data.SqlClient" />-->
@@ -24,6 +30,11 @@
     <add key="CslaAuthentication" value="Csla" />
     <add key="PersistenceContextType" value="ComplexCommerce.Data.Entity.Context.EntityFrameworkObjectContext, ComplexCommerce.Data.Entity" />
     <add key="PersistenceDetailsType" value="ComplexCommerce.Data.Entity.Context.PersistenceDetails, ComplexCommerce.Data.Entity" />
+    <add key="elmah.mvc.disableHandler" value="false" />
+    <add key="elmah.mvc.disableHandleErrorFilter" value="false" />
+    <add key="elmah.mvc.requiresAuthentication" value="false" />
+    <add key="elmah.mvc.allowedRoles" value="*" />
+    <add key="elmah.mvc.route" value="elmah" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -42,13 +53,17 @@
         <add namespace="System.Web.WebPages" />
         <add namespace="MvcSiteMapProvider.Web.Html" />
         <add namespace="MvcSiteMapProvider.Web.Html.Models" />
-				<add namespace="ComplexCommerce.Web.Mvc"/>
-				<add namespace="ComplexCommerce.Web.Mvc.Helpers"/>
+        <add namespace="ComplexCommerce.Web.Mvc" />
+        <add namespace="ComplexCommerce.Web.Mvc.Helpers" />
       </namespaces>
     </pages>
+    <httpModules>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+    </httpModules>
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
@@ -58,12 +73,18 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <httpErrors errorMode="Custom" existingResponse="Replace">
-			<remove statusCode="404"/>
+      <remove statusCode="404" />
       <error statusCode="404" responseMode="ExecuteURL" path="/not-found" />
-			<!-- TODO: Show errors in debug mode -->
-			<remove statusCode="500"/>
-      <error statusCode="500" responseMode="ExecuteURL" path="/server-error" />
+      <!-- TODO: Show errors in debug mode -->
+      <!--<remove statusCode="500" />
+      <error statusCode="500" responseMode="ExecuteURL" path="/server-error" />-->
     </httpErrors>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+    </modules>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -77,7 +98,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
@@ -92,4 +113,12 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
+  <elmah>
+		<!--
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
+        more information on remote access and securing ELMAH.
+    -->
+		<security allowRemoteAccess="false" />
+		<errorLog type="ComplexCommerce.Business.Logging.CslaErrorLog, ComplexCommerce.Business" applicationName="ComplexCommerce" />
+	</elmah>
 </configuration>
