--- a/src/ComplexCommerce/ComplexCommerce/Web.Release.config
+++ b/src/ComplexCommerce/ComplexCommerce/Web.Release.config
@@ -27,5 +27,12 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
+		
   </system.web>
+	<system.webServer>
+		<httpErrors errorMode="Custom" existingResponse="Replace">
+			<remove statusCode="404" />
+			<error statusCode="404" responseMode="ExecuteURL" path="/not-found" />
+		</httpErrors>
+	</system.webServer>
 </configuration>
