--- a/src/ComplexCommerce/ComplexCommerce/Web.config
+++ b/src/ComplexCommerce/ComplexCommerce/Web.config
@@ -30,6 +30,7 @@
     <add key="CslaAuthentication" value="Csla" />
     <add key="PersistenceContextType" value="ComplexCommerce.Data.Entity.Context.EntityFrameworkObjectContext, ComplexCommerce.Data.Entity" />
     <add key="PersistenceDetailsType" value="ComplexCommerce.Data.Entity.Context.PersistenceDetails, ComplexCommerce.Data.Entity" />
+		<!-- ELMAH Settings -->
     <add key="elmah.mvc.disableHandler" value="false" />
     <add key="elmah.mvc.disableHandleErrorFilter" value="false" />
     <add key="elmah.mvc.requiresAuthentication" value="false" />
@@ -72,13 +73,6 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    <httpErrors errorMode="Custom" existingResponse="Replace">
-      <remove statusCode="404" />
-      <error statusCode="404" responseMode="ExecuteURL" path="/not-found" />
-      <!-- TODO: Show errors in debug mode -->
-      <!--<remove statusCode="500" />
-      <error statusCode="500" responseMode="ExecuteURL" path="/server-error" />-->
-    </httpErrors>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
